package io.github.archessmn.ENG1.GameModel;

public class Achievement {
    String title; // Displayed as a title when the achievement is achieved
    String description; // Displayed as a description when the achievement is achieved
}
