package io.github.archessmn.ENG1.GameModel;

import com.badlogic.gdx.utils.Array;

public class AchievementManager {
    Array<Achievement> achievements; // Stores which achievements have been met this game
}
