package io.github.archessmn.ENG1.GameModel;

import java.util.ArrayList;

public class GameEvent {
    String title;
    String description;
    float rarity;
}
